--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -3,12 +3,10 @@ name: Workflow for master/development branches
 on:
   pull_request:
     branches:
-      - 'development'
-      - 'master'
+      - 'kmp-impl'
   push:
     branches:
-      - 'development'
-      - 'master'
+      - 'kmp-impl'
 
 concurrency:
   group: build-${{ github.ref }}
@@ -70,9 +68,6 @@ jobs:
           path: |
             **/build/reports/detekt/detekt.md
 
-
-
-
   dependency_guard:
     needs: setup
     runs-on: ubuntu-latest
@@ -108,79 +103,3 @@ jobs:
           file_pattern: '**/dependencies/*.txt'
           disable_globbing: true
           commit_message: "🤖 Updates baselines for Dependency Guard"
-
-  tests_and_lint:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: 17
-
-      - name: Run tests
-        run: |
-          ./gradlew testDebug :lint:test :androidApp:lintRelease :lint:lint
-
-      - name: Upload reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-and-lint-reports
-          path: |
-            **/build/reports/lint-results-*.html
-            **/build/test-results/test*UnitTest/**.xml
-
-
-      # Add `createDebugUnitTestCoverageReport` if we ever add JVM tests for prod
-      - name: Generate coverage reports for Debug variants (only API 30)
-        run: ./gradlew createDebugCombinedCoverageReport
-
-      - name: Upload test reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-reports-${{ matrix.api-level }}
-          path: '**/build/reports/androidTests'
-
-      - name: Display local test coverage (only API 30)
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.6.1
-        with:
-          title: Combined test coverage report
-          min-coverage-overall: 40
-          min-coverage-changed-files: 60
-          paths: |
-            ${{ github.workspace }}/**/build/reports/jacoco/**/*Report.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload local coverage reports (XML + HTML) (only API 30)
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-reports
-          if-no-files-found: error
-          compression-level: 1
-          overwrite: false
-          path: '**/build/reports/jacoco/'
-
-  build:
-    needs: [ checks, dependency_guard, tests_and_lint ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: 17
-
-      - name: Build APKs
-        run: ./gradlew :androidApp:assembleDebug
-
-      - name: Upload APKs
-        uses: actions/upload-artifact@v4
-        with:
-          name: APKs
-          path: '**/build/outputs/apk/**/*.apk'
-
