--- a/gradle.properties
+++ b/gradle.properties
@@ -46,3 +46,4 @@ kotlin.code.style=official
 # https://developer.android.com/build/releases/gradle-plugin#default-changes
 android.defaults.buildfeatures.resvalues=false
 android.defaults.buildfeatures.shaders=false
+org.jetbrains.compose.experimental.jscanvas.enabled=true
