--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ androidxUiAutomator = "2.3.0"
 annotation = "1.9.1"
 appcompatVersion = "1.7.0"
 cameraCoreVersion = "1.3.4"
+mlkit="17.3.0"
+guavaVersion = "33.3.1-android"
 cameraxVersion = "1.4.1"
 compose-material = "1.7.6"
 coreKtx = "1.15.0"
@@ -130,6 +132,8 @@ androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", 
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraxVersion" }
 androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraxVersion" }
 androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraxVersion" }
+mlkit-barcode-scanning = { module = "com.google.mlkit:barcode-scanning", version.ref = "mlkit" }
+guava = { module = "com.google.guava:guava", version.ref = "guavaVersion" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-compiler = { group = "androidx.compose.compiler", name = "compiler", version.ref = "androidxComposeCompiler" }
