--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,6 +57,8 @@ playServicesCodeScanner = "16.1.0"
 playServicesVersion = "19.0.0"
 retrofitVersion = "2.11.0"
 roborazzi = "1.26.0"
+protobuf = "4.26.0"
+protobufPlugin = "0.9.4"
 room = "2.7.0-alpha12"
 sqliteBundled = "2.5.0-alpha12"
 rxandroidVersion = "2.1.1"
@@ -209,6 +211,7 @@ lint-api = { group = "com.android.tools.lint", name = "lint-api", version.ref = 
 lint-checks = { group = "com.android.tools.lint", name = "lint-checks", version.ref = "androidTools" }
 lint-tests = { group = "com.android.tools.lint", name = "lint-tests", version.ref = "androidTools" }
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockitoCoreVersion" }
+protobuf-protoc = { group = "com.google.protobuf", name = "protoc", version.ref = "protobuf" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesVersion" }
 reactivex-rxjava2 = { group = "io.reactivex.rxjava2", name = "rxjava", version.ref = "rxjavaVersion" }
 reactivex-rxjava2-android = { group = "io.reactivex.rxjava2", name = "rxandroid", version.ref = "rxandroidVersion" }
@@ -225,6 +228,7 @@ turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine
 twitter-detekt-compose = { group = "com.twitter.compose.rules", name = "detekt", version.ref = "twitter-detekt-compose" }
 work-testing = { group = "androidx.work", name = "work-testing", version = "2.8.1" }
 zxing-core = { group = "com.google.zxing", name = "core", version.ref = "zxingVersion" }
+protobuf-kotlin-lite = { group = "com.google.protobuf", name = "protobuf-kotlin-lite", version.ref = "protobuf" }
 
 # [New KMP Dependencies]
 
@@ -372,6 +376,7 @@ mifos-spotless-plugin = { id = "mifos.spotless.plugin", version = "unspecified" 
 firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsPlugin" }
 firebase-perf = { id = "com.google.firebase.firebase-perf", version.ref = "firebasePerfPlugin" }
 
+protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 roborazzi = { id = "io.github.takahirom.roborazzi", version.ref = "roborazzi" }
 gms = { id = "com.google.gms.google-services", version.ref = "gmsPlugin" }
 dependencyGuard = { id = "com.dropbox.dependency-guard", version.ref = "dependencyGuard" }
